# setup_python1013_test

./: Dockerfile  pyproject.toml
.github/workflows/: check.yml  check_with_setup_python.yml  check_without_setup_python.yml  test-docker-images  test-docker-images.yml  testdockeralter1.yml
